# lab1

./: WinRAR.lnk  docker-compose.yml  pyproject.toml
data/: test.txt  text.txt
src/app/: main.py  settings.py  utils.py
src/app/auth/: model.py  router.py  service.py
src/app/models/: user.py
src/app/templates/: base.html  change-password.html  check-perms.html  create-resource.html  edit-file.html  file.html  files.html  login.html  register.html  settings.html  user.html
