[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Oleksii But <alms27912@gmail.com>"]
readme = "README.md"
packages = [{include = "app", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
odmantic = "^1.0.0"
pydantic-settings = "^2.1.0"
jinja2 = "^3.1.3"
python-multipart = "^0.0.9"
pillow = "^10.2.0"
fastui = "^0.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
